--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link href="https://fonts.googleapis.com/css2?family=Abel&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="styles/grid.css">
     <link rel="stylesheet" href="styles/index.css">
+    <link rel="shortcut icon" type="image/x-icon" href="favicon/favicon.png">
     
 </head>
 <body>
