--- a/index.html
+++ b/index.html
@@ -232,7 +232,10 @@
     </div>
 
     <footer id="footerSection">
-        <p>&copy;Copyright 2023 <span>AsEDeyHot</span></p>
+        <p>
+          &copy;Copyright 2023 <span>AsEDeyHot</span>
+          <span class="span-author">Patrick</span>
+        </p>
     </footer>
 </body>
 </html>
