--- a/index.html
+++ b/index.html
@@ -33,11 +33,11 @@
     
         <div id="bannerSection">
            <div id="bannerContent">
-              <h2>Enjoy Burgry make <br> your Tummy Happy</h2>
+              <h2>Enjoy Burgry make <br> your Tummy Happyy</h2>
               <p>
                 Lorem ipsum dolor sit, amet consectetur <br> adipisicing elit. Similique molestias,<br> architecto aperiam assumenda incidunt laborum offi.
               </p>
-          </div>
+            </div>
         </div>
       </div>
     </div>
